--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/2.3.4/owl.theme.default.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
     ----->
-    
+
     <!-- Bootstrap css -->
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
 
@@ -1147,7 +1147,7 @@
     <script src="js/jquery.sticky.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/custom.js"></script>
-    <script src="js/custom.ts"></script>
+    <script src="assets/js/custom.ts"></script>
 
 
 </body>
