--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                     <div class="col-6 col-lg-9">
                         <a class="small mr-3"><span class="icon-question-circle-o mr-2"></span>
-                            <span id="faqBtn" class="d-lg-inline-block">Have a questions?</span></a>
+                            <span data-target="#formModal" class="d-lg-inline-block">Have a questions?</span></a>
                         <a href="#" class="small mr-3"><i class="fa fa-phone" aria-hidden="true"></i><span
                                 class="d-none d-lg-inline-block">
 
@@ -65,7 +65,7 @@
         <div class="sticky-nav js-sticky-header">
             <div class="container position-relative">
                 <div class="site-navigation text-center">
-                    <a href="index.html" class="logo menu-absolute m-0">
+                    <a href="index.html" class="logo m-0">
                         <img src="img/Mtendere_logo.png" alt="Image" class="img-fluid">
                     </a>
                     <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
@@ -123,7 +123,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
-                    <a id="formModal" class="btn-book btn btn-secondary btn-sm menu-absolute" data-target="#formModal">Enroll Now</a>
+                    <a href="#" class="btn-book btn btn-secondary btn-sm" data-target="#formModal">Enroll Now</a>
                     <a href="#"
                         class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
                         data-toggle="collapse" data-target="#main-navbar">
