--- a/blog-details.html
+++ b/blog-details.html
@@ -8,37 +8,15 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/favicon.png">
-    <!---
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/2.3.4/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/2.3.4/owl.theme.default.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
-        ---->
-
-    <!-- Bootstrap css -->
-    <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-
-    <link href="lib/bootstrap/css/style.min.css" rel="stylesheet">
-
-    <!-- Libraries CSS Files -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.theme.default.min.css" rel="stylesheet">
-    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/modal-video/css/modal-video.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
+    <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="assets/css/aos.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -59,18 +37,18 @@
 
                     <div class="col-6 col-lg-9">
                         <a class="small mr-3"><span class="icon-question-circle-o mr-2"></span>
-                            <span id="faqBtn" class="d-lg-inline-block">Have a questions?</span></a>
-                        <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span
+                            <span data-target="#formModal" onclick="formModal(true)" class="d-lg-inline-block">Have a questions?</span></a>
+                        <a href="#" class="small mr-3"><i class="fa fa-phone" aria-hidden="true"></i><span
                                 class="d-none d-lg-inline-block">
 
                             </span></a>
-                        <a href="#" class="small mr-3"><span class="icon-envelope mr-2"></span> <span
+                        <a href="#" class="small mr-3"><i class="fa fa-envelope" aria-hidden="true"></i> <span
                                 class="d-none d-lg-inline-block">mtendereeducationconsult@gmail.com</span></a>
                     </div>
 
                     <!-- Language Selector -->
-                    <div class="col-6 text-center">
-                        <select class="form-select small mr-3"" id=" language-select">
+                    <div class="d-lg-inline-block">
+                        <select class="form-select small mr-3" id=" language-select">
                             <option value="en">English</option>
                             <option value="es">Español</option>
                             <option value="fr">Français</option>
@@ -78,16 +56,8 @@
                         </select>
                     </div>
 
-                    <div class="col-6 col-lg-3 text-right">
-                        <a href="login.html" class="small mr-3">
-                            <span class="icon-lock"></span>
-                            Log In
-                        </a>
-                        <a href="register.html" class="small">
-                            <span class="icon-person"></span>
-                            Register
-                        </a>
-                    </div>
+                    <a href="#" onclick="togglePopup(false)" style=" margin-right: 10px;">Log In</a>
+                    <a href="#" onclick="togglePopup(true)">Register</a>
 
                 </div>
             </div>
@@ -95,10 +65,9 @@
         <div class="sticky-nav js-sticky-header">
             <div class="container position-relative">
                 <div class="site-navigation text-center">
-                    <a href="index.html" class="logo menu-absolute m-0">
+                    <a href="index.html" class="logo m-0">
                         <img src="img/Mtendere_logo.png" alt="Image" class="img-fluid">
                     </a>
-
                     <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="course.html">Scholarships</a></li>
@@ -117,7 +86,7 @@
                                 <li><a href="Paruluniversity.html">Galgocia University</a></li>
                                 <li><a href="Paruluniversity.html">Noida University</a></li>
                                 <li><a href="Paruluniversity.html">Khalsa College</a></li>
-                                <li><a hrefParuluniversity.htmlLovey Professional University</a></li>
+                                <li><a href="Paruluniversity.htmlLovey Professional University"></a></li>
                                 <li class="has-children">
                                     <a href="#">GEDU GLOBAL</a>
                                     <ul class="dropdown">
@@ -154,7 +123,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
-                    <a id="openFormBtn" class="btn-book btn btn-secondary btn-sm menu-absolute">Enroll Now</a>
+                    <a href="#" class="btn-book btn btn-secondary btn-sm" data-target="#formModal">Enroll Now</a>
                     <a href="#"
                         class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
                         data-toggle="collapse" data-target="#main-navbar">
